# inkstone

./: .gitignore  Cargo.toml  README.md  fonts.json
crates/encoding/: Cargo.toml
crates/font/: Cargo.toml
crates/font/examples/: font_info.rs  parse.rs  parse_fonts.rs
crates/font/src/: cff.rs  error.rs  lib.rs  macros.rs  parsers.rs  svg.rs  truetype.rs  type1.rs
crates/font/src/opentype/: cmap.rs  gsub.rs  kern.rs  mod.rs
crates/glyph-matcher/: Cargo.toml
crates/glyph-matcher/examples/: sim.rs  test.rs  uni.rs
crates/glyph-matcher/src/: lib.rs
crates/istring/: Cargo.toml
crates/istring/src/: common.rs  ibytes.rs  istring.rs  lib.rs  small.rs  tiny.rs
crates/rasterize/: Cargo.toml  README.md
crates/rasterize/src/: egl_backend.rs  lib.rs  macos.rs
crates/render/: Cargo.toml
crates/render/benches/: render.rs  view.rs
crates/render/examples/: trace.rs
crates/render/src/: backend.rs  cache.rs  font.rs  fontentry.rs  image.rs  lib.rs  renderstate.rs  textstate.rs  tracer.rs
crates/svg/: Cargo.toml
crates/svg/examples/: font2svg.rs  parse.rs
crates/svg/src/: lib.rs  types.rs
crates/svg/src/dom/: error.rs  g.rs  macros.rs  paint.rs  polygon.rs  svg.rs  util.rs  value.rs
crates/svg/src/dom/parser/: color.rs
crates/svg/src/draw/: animate.rs  attrs.rs  draw.rs  gradient.rs  mod.rs
crates/viewer/: Cargo.toml
crates/viewer/src/: config.rs  context.rs  lib.rs  types.rs
encoding/: Cargo.toml
examples/convert/: Cargo.toml
examples/pdf2image/: Cargo.toml
examples/svg2png/: Cargo.toml
examples/yew-wasm/: Cargo.toml
font/: Cargo.toml
font/src/: cff.rs  lib.rs  parsers.rs  postscript.rs  truetype.rs  type1.rs  type2.rs
font/src/opentype/: base.rs  cmap.rs  gpos.rs  mod.rs
glyph-matcher/: Cargo.toml
glyph-matcher/examples/: sim.rs
glyph-matcher/src/: frechet.rs  lib.rs
inkstone/: Cargo.toml
inkstone/src/: prelude.rs
native-app/: Cargo.toml  README.md
native-app/src/: app.rs  backend.rs  lib.rs  main.rs  native.rs  renderer.rs
rasterize/: Cargo.toml
rasterize/src/: lib.rs
render/: Cargo.toml
render/src/: cache.rs  font.rs  fontentry.rs  scene.rs  textstate.rs  tracer.rs
svg/: Cargo.toml
svg/src/: lib.rs  web.rs
svg/src/dom/: animate.rs  attrs.rs  ellipse.rs  filter.rs  g.rs  gradient.rs  mod.rs  path.rs  rect.rs  text.rs  util.rs
svg/src/dom/parser/: mod.rs
svg/src/draw/: attrs.rs  draw.rs  filter.rs  g.rs  gradient.rs
svg/src/draw/text/: chunk.rs  mod.rs
svg/src/text/: mod.rs
view/: Cargo.toml
view/src/: context.rs  lib.rs  native.rs  wasm.rs
web-app/: Cargo.toml  README.md  Trunk.toml  dev.sh  index.html
web-app/src/: app.rs  backend.rs  engine.rs  interactive_app.rs  lib.rs  pdf_app.rs  utils.rs  viewer.rs  wasm.rs
web-app/src/components/: canvas.rs  header.rs  mod.rs  sidebar.rs  toolbar.rs
