[workspace]
members = [
    "crates/viewer",
    "crates/render",
    "crates/font",
    "crates/glyph-matcher",
    "crates/encoding",
    "crates/rasterize",
    "crates/istring",
    # "crates/svg",
    "inkstone",
    "web-app",
    "native-app",
    # TODO: Fix the bugs in example
    # "examples/*",
]
resolver = "2"

[workspace.package]
edition = "2024"
authors = ["Sandip Dey <sandip.dey1988@yahoo.com>"]
license = "MIT"
description = "PDF render library"


[workspace.dependencies]
pathfinder_canvas = { git = "https://github.com/servo/pathfinder", rev = "6ef6ccb" }
pathfinder_gl = { git = "https://github.com/servo/pathfinder", rev = "6ef6ccb" }
pathfinder_webgl = { git = "https://github.com/servo/pathfinder", rev = "6ef6ccb" }
pathfinder_gpu = { git = "https://github.com/servo/pathfinder", rev = "6ef6ccb" }
pathfinder_content = { git = "https://github.com/servo/pathfinder", rev = "6ef6ccb" }
pathfinder_color = { git = "https://github.com/servo/pathfinder", rev = "6ef6ccb" }
pathfinder_geometry = { git = "https://github.com/servo/pathfinder", rev = "6ef6ccb" }
pathfinder_renderer = { git = "https://github.com/servo/pathfinder", rev = "6ef6ccb" }
pathfinder_resources = { git = "https://github.com/servo/pathfinder", rev = "6ef6ccb" }
pathfinder_export = { git = "https://github.com/servo/pathfinder", rev = "6ef6ccb" }
pathfinder_simd = { git = "https://github.com/servo/pathfinder", rev = "6ef6ccb" }
pathfinder_svg = { git = "https://github.com/servo/pathfinder", rev = "6ef6ccb" }
pdf = { version = "0.9.0", default-features = false }

itertools = "0.14.0"
image = "0.25.8"
instant = "0.1.12"
custom_debug_derive = "0.6.2"
globalcache = { version = "0.3", features = ["sync"] }
istring = { git = "https://github.com/s3bk/istring" }
once_cell = "1.21.3"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
log = "0.4.28"
rust-embed = { version = "*", features = ["interpolate-folder-path"] }
roxmltree = "0.21.1"
svgtypes = "0.15.2"
libflate = "2.1.0"
nom = "8.0.0"
isolang = "2.4"
unicode-joining-type = "1.0.0"
unic-ucd-category = "0.9.0"
unic-segment = "0.9"
unic-bidi = "0.9"
whatlang = { version = "0.18.0" }
lazy_static = "1.5.0"
palette = "0.7.6"
rand = "0.9.2"
indexmap = "2.12.0"
syn = { version = "2.0.107", features = ["full"] }
quote = "1.0.41"
env_logger = "0.11.8"
