[package]
name = "font"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
description.workspace = true

[features]
unstable = ["slotmap/unstable", "tuple/nightly"]
# svg = ["svg_dom", "inflate"]
woff = ["brotli-decompressor", "inflate"]
type1 = ["postscript"]
type2 = []
opentype = []
cff = ["type1", "type2"]
postscript = []
math = []
default = ["opentype"]

[dependencies]
pdf_encoding = { path = "../encoding" }
pathfinder_geometry = { workspace = true }
pathfinder_content = { workspace = true }
pathfinder_color = { workspace = true }
tuple = { git = "https://github.com/s3bk/tuple/" }
nom = { workspace = true, features = ["default"] }
log = { workspace = true }
rand = { workspace = true }
slotmap = { version = "1.0" }
decorum = "0.4.0"
itertools = { workspace = true }
indexmap = { workspace = true }
brotli-decompressor = { version = "5.0.0", optional = true }
inflate = { version = "0.4.5", optional = true }
istring = "0.4.0"

[dev-dependencies]
pathfinder_renderer = { workspace = true }
pathfinder_export = { workspace = true }
walkdir = "2.3"
env_logger = { workspace = true }
memmap = "0.7.0"
