[package]
name = "inkstone"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
description.workspace = true

[dependencies]
istring = { path = "../istring", features = ["serialize"] }
pdf_render = { path = "../render" }
font = { path = "../font", features=["cff", "opentype"] }
pdf_encoding = { path = "../encoding" }
rasterize = { path = "../rasterize" }
pdf_view = { path = "../view" }
pdf_svg = { path = "../svg" }
