[package]
name = "inkstone"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
description.workspace = true

[dependencies]
istring = { path = "../crates/istring", features = ["serialize"] }
inkrender = { path = "../crates/render" }
inkfont = { path = "../crates/font", features=["cff", "opentype"] }
inkencoding = { path = "../crates/encoding" }
rasterize = { path = "../crates/rasterize" }
viewer = { path = "../crates/viewer" }
