[package]
name = "native-app"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
description = "Native PDF viewer using GPUI"

[features]
unstable = []

[dependencies.pdf]
workspace = true
default-features = false
features = ["dump"]

[dependencies]
viewer = { path = "../crates/viewer" }
pathfinder_renderer = { workspace = true }
pathfinder_geometry = { workspace = true }
pathfinder_color = { workspace = true }
pathfinder_resources = { workspace = true }
pathfinder_content = { workspace = true }
pathfinder_export = { workspace = true }
pathfinder_gl = { workspace = true }
log = { workspace = true }
inkrender = { path = "../crates/render" }
inkfont = { path = "../crates/font" }
inkencoding = { path = "../crates/encoding" }
rasterize = { path = "../crates/rasterize" }

itertools = { workspace = true }
image = { workspace = true }
env_logger = { workspace = true }

# GPUI dependencies
gpui = "0.2.2"
gpui-component = "0.5.0"
# Optional, for default bundled assets
gpui-component-assets = "0.5.0"
anyhow = "1"

# File dialog
rfd = "0.17.0"

[dev-dependencies]
criterion = "0.8.1"

[[bin]]
name = "inkstone-viewer"
path = "src/main.rs"

[lib]
crate-type = ["rlib"]
