[package]
name = "rasterize"
version = "0.1.0"
edition = "2021"

[dependencies]
pathfinder_geometry = { workspace = true }
pathfinder_content = { workspace = true }
pathfinder_color = { workspace = true }
pathfinder_gl = { workspace = true }
pathfinder_gpu = { workspace = true }
pathfinder_canvas = { workspace = true }
pathfinder_renderer = { workspace = true }
pathfinder_resources = { workspace = true }
font = { path = "../font" }
gl = "0.14.0"
image = { workspace = true }
khronos-egl = { version = "6.0.0", features = ["static"] }
