[package]
name = "pdf_render"
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Renderer for PDF files"

[features]
unstable = []

[[bench]]
name = "render"
harness = false

[dependencies.pdf]
workspace = true
default-features = false
features = ["cache", "dump"]

[dependencies]
pathfinder_renderer = { workspace = true }
pathfinder_color = { workspace = true }
pathfinder_geometry = { workspace = true }
pathfinder_resources = { workspace = true }
pathfinder_content = { workspace = true }
log = "0.4"
pdf_encoding = { path = "../encoding" }
itertools = { workspace = true }
image = { workspace = true }
instant = { workspace = true }
custom_debug_derive = { workspace = true }
globalcache = { workspace = true, features = ["sync"] }
istring = { workspace = true }
once_cell = { workspace = true }
serde_json = { workspace = true }
font = { path = "../font" }
glyphmatcher = { path = "../glyph-matcher" }
# rust-embed = { workspace = true, features = ["interpolate-folder-path"] }

[dev-dependencies]
criterion = "0.5.1"
env_logger = "*"
