[package]
name = "pdf_view"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
description = ""

[features]
unstable = []

[dependencies.pdf]
workspace = true
default-features = false
features = ["dump"]

[dependencies]
pathfinder_renderer = { workspace = true }
pathfinder_geometry = { workspace = true }
pathfinder_color = { workspace = true }
pathfinder_resources = { workspace = true }
pathfinder_content = { workspace = true }
pathfinder_export = { workspace = true }
pathfinder_webgl = { workspace = true }
pathfinder_gl = { workspace = true }
log = { workspace = true }
structopt = "0.3"
pdf_render = { path = "../render" }
font = { path = "../font" }
pdf_encoding = { path = "../encoding" }
itertools = { workspace = true }
image = { workspace = true }

wasm-bindgen = "0.2.48"
js-sys = "0.3"
web-sys = { version = "*", features = [
    "Event",
    "KeyboardEvent",
    "MouseEvent",
    "WheelEvent",
    "HtmlCanvasElement",
    "CssStyleDeclaration",
    "WebGl2RenderingContext",
] }
console_log = "1.0.0"
console_error_panic_hook = "0.1.6"
getrandom = { version = "0.3.2" }

[dev-dependencies]
criterion = "0.7.0"

[target.'cfg(unix)'.dependencies]
env_logger = { workspace = true }
pathfinder_gl = { workspace = true }
gl = "0.14.0"
glutin = "0.32.0"
glutin-winit = "0.5.0"
winit = "0.30.4"
tuple = "0.5"
raw-window-handle = "0.6.2"

[lib]
crate-type = ["cdylib", "rlib"]
