[package]
name = "inkencoding"
version = "0.4.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
description.workspace = true

readme = "README.md"

include = [
    "agl-aglfn/glyphlist.txt",
    "src",
    "build.rs",
    "README.md",
]

exclude = [
    "encodings"
]

[dependencies]
lazy_static = { workspace = true }
