[package]
name = "glyphmatcher"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
inkfont = { path = "../font", features = ["cff", "opentype"] }
inkencoding = { path = "../encoding" }
pathfinder_content = { workspace = true }
pathfinder_geometry = { workspace = true }
itertools = {workspace = true}
serde = { workspace = true, features = ["derive"] }
postcard = { version = "1.0", features = ["alloc"] }
istring = { workspace = true, features = ["serialize"] }
serde_json = { workspace = true }
