[package]
name = "istring"
version = "0.4.2"

edition.workspace = true
authors.workspace = true
description = "A replacement for String that allows storing short strings of length up to sizeof<String>() - 1 without a heap allocation"
license.workspace = true

keywords = ["string", "inline", "no_std"]

[features]
size = ["datasize"]
serialize = ["serde"]
rkyv = ["dep:rkyv", "dep:rancor"]
ts = ["dep:ts-rs"]

[dependencies.datasize]
version = "0.2"
optional = true

[dependencies.serde]
version = "1.0"
optional = true

[dependencies.rkyv]
version = "0.8"
optional = true
default-features = false

[dependencies.rancor]
version = "0.1"
optional = true

[dependencies.ts-rs]
version = "11.1.0"
optional = true
