[package]
name = "pdf_svg"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "SVG support for PDF rendering"

[dependencies]
roxmltree = { workspace = true }
svgtypes = { workspace = true }
log = { workspace = true }
itertools = { workspace = true }
libflate = { workspace = true }
nom = { workspace = true }
isolang = { workspace = true }
unicode-joining-type = { workspace = true }
unic-ucd-category = { workspace = true }
unic-segment = { workspace = true }
unic-bidi = { workspace = true }
whatlang = { workspace = true }
lazy_static = { workspace = true }
palette = { workspace = true }
syn = { workspace = true, features = ["full"] }
quote = { workspace = true }

pathfinder_resources = { workspace = true }
pathfinder_geometry = { workspace = true }
pathfinder_content = { workspace = true }
pathfinder_renderer = { workspace = true }
pathfinder_color = { workspace = true }
pathfinder_simd = { workspace = true }
font = { path = "../font", features = ["opentype"] }
pdf_view = { path = "../view" }
rasterize = { path = "../rasterize" }

wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
web-sys = { version = "0.3", features = [
    "HtmlCanvasElement",
    "WebGl2RenderingContext",
] }

[dev-dependencies]
pathfinder_resources = { workspace = true }
env_logger = { workspace = true }
image = { workspace = true }
