[package]
name = "pdf2image"
version = "0.1.0"
authors.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pdf = { workspace = true }
inkrender = { path = "../crates/render" }
argh = "0.1.12"
rasterize = { path = "../crates/rasterize" }
pathfinder_geometry = { workspace = true }
env_logger = { workspace = true }
